# kwin

./: .gitignore  CMakeLists.txt
cmake/modules/: Findlibhybris.cmake
src/: config-kwin.h.cmake  main_wayland.cpp
src/backends/: CMakeLists.txt
src/backends/hwcomposer/: CMakeLists.txt  hwcomposer_backend.cpp  hwcomposer_backend.h  hwcomposer_egl_backend.cpp  hwcomposer_egl_backend.h  hwcomposer_logging.cpp
src/backends/libinput/: context.cpp
src/platformsupport/scenes/opengl/: abstract_egl_backend.cpp
