add_subdirectory(drm)
add_subdirectory(fakeinput)
if (HAVE_LINUX_FB_H)
    add_subdirectory(fbdev)
endif()
add_subdirectory(libinput)
if (HAVE_LIBHYBRIS)
    add_subdirectory(hwcomposer)
endif()
add_subdirectory(virtual)
add_subdirectory(wayland)

if (KWIN_BUILD_X11)
    add_subdirectory(x11)
endif()
